ContractService and Policy integration, part 1: Refactor ContractService and ContractOfferFramework interfaces (#235)
* Initial ContractOfferService restructuring

* Implement ParticipantAgentService

* Add criteria (not used yet; this will be done in a later PR) and pagination attributes

* Add not null annotation

* Remove TODO

* Remove doc char

* Remove interface

* Add TODO